src/test/ui/type-alias-impl-trait/different_lifetimes_defining_uses.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/different_lifetimes_defining_uses.rs:10:1
   |
LL | fn bar<'a, 'b>(a: &'a u32, b: &'b u32) -> OneLifetime<'a, 'b> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&'a u32`, got `&'b u32`
   |
note: previous use here
  --> $DIR/different_lifetimes_defining_uses.rs:6:1
   |
LL | fn foo<'a, 'b>(a: &'a u32, b: &'b u32) -> OneLifetime<'a, 'b> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

